# SQLite-Editor

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CMakeUserPresets.json  README.md
Core/: .gitignore  CMakeLists.txt  CMakeUserPresets.json  logger.cpp  logger.h  mainwindow.cpp  mainwindow.h  navigator.cpp  navigator.h  resource.qrc
Core/AutoComplete/: AutoCompleteTextEdit.cpp  AutoCompleteTextEdit.h  SQLHighlighter.cpp  SQLHighlighter.h
Core/DBNavigator/: CDBNavigator.cpp  CDBNavigator.h
Core/ERDiagram/: CERDiagram.cpp  CERDiagram.h
Core/SQLWorkSpace/: CSQLWorkSpace.cpp  CSQLWorkSpace.h
Core/TableDiagram/: CTableDiagram.cpp  CTableDiagram.h
Core/TableEditorDialog/: CTableEditorDialog.cpp  CTableEditorDialog.h
Core/TableViewWorkspace/: CTableViewWorkspace.h
Core/TimeLineWidget/: customitemdelegate.cpp  customwidget.cpp
Core/Video/: QVideo.cpp
EditorGUI/: CMakeLists.txt  main.cpp  mainwindow.cpp  resource.qrc
EditorGUI/DBNavigator/: CDBNavigator.cpp
EditorGUI/TableDiagram/: CTableDiagram.cpp  CTableDiagram.h
EditorGUI/TableViewWorkspace/: CTableViewWorkspace.cpp
EditorGUI/TimeLineWidget/: customitemdelegate.h  customwidget.cpp  customwidget.h
EditorGUI/Video/: QVideo.h
EditorParser/: CMakeLists.txt
EditorParser/include/: ConcreteVisitor.h  Parser.h  SQLCompletionEngine.h  SQLParserAPI.h  sqlcompletion.h
EditorParser/sqlite3/include/: sqlite3.h
EditorParser/sqlite3/lib/: sqlite3.lib
EditorParser/src/: AST.cpp  Lexer.cpp  SQLCompletionEngine.cpp  SQLParserAPI.cpp  sqlcompletion.cpp
SQLParser/: CMakeLists.txt
SQLParser/include/: AST.h  ConcreteVisitor.h  Lexer.h  Parser.h  SQLParserAPI.h  Visitor.h
SQLParser/sqlite3/include/: sqlite3-vcpkg-config.h
SQLParser/src/: AST.cpp  Lexer.cpp  Parser.cpp  SQLCompletionEngine.cpp  SQLParserAPI.cpp  Visitor.cpp  main.cpp
